fix: Fix so it works better on mobile-view

--- a/src/components/UpdateCredentialsForm/UpdateCredentialsForm.scss
+++ b/src/components/UpdateCredentialsForm/UpdateCredentialsForm.scss
@@ -14,3 +14,11 @@
         gap: 0.2rem;
     }
 }
+
+@media only screen and (max-width: 600px){
+    .updateCredentialsContainer{
+        form{
+            width: 75%;
+        }
+    }
+}
